Add mobile styling

--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#pricing">Pricing</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="mailto:justinpotts@ou.edu">Request a demo</a>
         </li>
       </ul>
@@ -98,7 +95,7 @@
 
   <div class="container">
     <div class="row vertical-center">
-      <div class="col-md-4">
+      <div class="col-md-4 hidden-md-down">
         <img src="iphone-header.png" width=275px;>
       </div>
       <div class="col-md-8">
@@ -117,7 +114,7 @@
   </div>
   <div class="container" id="pricing" style="padding-top:75px; padding-bottom:75px;">
     <div class="row">
-      <div class="col">
+      <div class="col-md-4" style="margin-top:50px; margin-bottom:50px;">
         <h1 class="li-header">Standard - $150</h1>
         <ul class="feature-list">
           <li class="list-item">One phone number</li>
@@ -126,7 +123,7 @@
           <li class="list-item">One GroupMe message</li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col-md-4" style="margin-top:50px; margin-bottom:50px;">
         <h1 class="li-header">Pro - $300</h1>
         <ul class="feature-list">
           <li class="list-item">Three phone numbers</li>
@@ -137,7 +134,7 @@
           <li class="list-item">Two GroupMe messages per call</li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col-md-4" style="margin-top:50px; margin-bottom:50px;">
         <h1 class="li-header">Premium - $500</h1>
         <ul class="feature-list">
           <li class="list-item">Five phone numbers</li>
@@ -155,7 +152,7 @@
   </div>
   <div class="container container-grey" style="width:100%; padding-top:75px; padding-bottom:75px;">
     <center>
-      <h1 class="sub-serif">RiskBot was designed and developed by <a href="https://twitter.com/PottsJustin">Justin Potts</a>, member and historian of the Pi Kappa Phi Alpha Gamma chapter.</h1>
+      <h1 class="sub-serif" style="line-height:1.5;">RiskBot was designed and developed by <a href="https://twitter.com/PottsJustin">Justin Potts</a>, member and historian of the Pi Kappa Phi Alpha Gamma chapter.</h1>
     </center>
   </div>
 </body>
