--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img src="iphone-header.png" width=275px;>
       </div>
       <div class="col-md-8">
-        <h1 style="margin-bottom:25px;">Risk sucks, let us do it for you.</h1>
+        <h1 style="margin-bottom:25px;">Risk sucks. Let us do it for you.</h1>
         <h2 class="subheader" style="margin-top:25px;">When the alcohol compliance team calls, we'll help you automate the process. By providing you with a set of phone numbers, we can have our bot answer the phone, ask them a few questions, put them on hold, and notify your chapter there's about to be a check.</h2>
         <a href="mailto:justinpotts@ou.edu" class="btn btn-large btn-grey"><h2 class="btn-text">REQUEST A DEMO</h2></a>
       </div>
