Update pricing notice

--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
       </div>
     </div>
     <center>
-      <a href="mailto:justinpotts@ou.edu" class="btn btn-large btn-grey" style="margin-top:50px;"><h2 class="btn-text">GET STARTED</h2></a>
+      <a href="mailto:justinpotts@ou.edu" class="btn btn-large btn-grey" style="margin-top:50px;margin-bottom:50px;"><h2 class="btn-text">GET STARTED</h2></a>
+    </center>
+    <center>
+      <p class="list-item" style="margin-top:50px"><em>Pricing is per semester, and may vary based on requested features and deadlines.</em></p>
     </center>
   </div>
   <div class="container container-grey" style="width:100%; padding-top:75px; padding-bottom:75px;">
